Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Diagnostics/6864382/T6864382.out
T6864382.java:9:27: compiler.err.type.found.req: (compiler.misc.type.parameter: T), (compiler.misc.type.req.class)
1 error
